moved icons to prevent cutoff on mobile

--- a/docs/style.css
+++ b/docs/style.css
@@ -298,6 +298,7 @@ input[type="text"] {
   .delete,
   .edit {
     grid-row: 4/5;
+    height: auto;
   }
 
   .delete {
